# bbq

./: .gitignore  README.md  pyproject.toml  settings.yaml
SOURCES/A/: a.cpp
SOURCES/B/: b.sh
SOURCES/C/: c.py
SOURCES/D/: d.sh
SPECS/bello/: bello.spec
SPECS/cello/: cello.spec
SPECS/hello_world_demo/: hello_world_demo.signatures.json
SPECS/pello/: pello.spec
bbq/: __main__.py
bbq/core/: cache.py  executor.py  graph.py  progress.py  queue.py  scheduler.py  task.py
bbq/workflows/: echo.py  example.py
