[tool.poetry]
name = "bbq"
version = "0.1.0"
description = ""
authors = ["Thien Trung Vuong <tvuong@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
typer-config = {extras = ["all"], version = "^1.4.0"}
pydantic = "^2.7.4"
docker = "^7.1.0"
python-rpm-spec = "^0.15.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
